small gap fix

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ nav li,
   display: grid;
   grid-template-rows: 400px 400px;
   grid-template-columns: clamp(600px, 75%, 1200px) 1fr;
-  column-gap: 20px;
+  column-gap: 30px;
   row-gap: 0px;
 }
 
@@ -201,7 +201,8 @@ nav li,
   display: grid;
   grid-template-rows: repeat(3, 200px);
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 44px;
+  column-gap: 20px;
+  row-gap: 44px;
 }
 
 .project {
